--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,6 @@
     <include src="./partials/button-load.html"></include>
 
     
-    <script type="module" src="index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
